--- a/task1/package.json
+++ b/task1/package.json
@@ -7,11 +7,17 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start-1": "nodemon ./src/1.1/index.js",
-    "start-2": "nodemon ./src/1.2/index.js",
+    "start-1": "nodemon --exec babel-node ./src/1.1/index.js",
+    "start-2": "nodemon --exec babel-node ./src/1.2/index.js",
     "start-3": "nodemon ./src/1.3/index.js"
   },
   "devDependencies": {
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/node": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-typescript": "^7.3.3",
+    "@types/node": "^12.0.7",
     "nodemon": "^1.19.1"
   },
   "dependencies": {
