--- a/task2/.eslintrc
+++ b/task2/.eslintrc
@@ -6,5 +6,9 @@
     "sourceType": "module"
   },
   "extends": ["plugin:@typescript-eslint/recommended"],
-  "rules": {}
+  "rules": {
+    "@typescript-eslint/no-empty-interface": "off",
+    "@typescript-eslint/interface-name-prefix": "off",
+    "@typescript-eslint/explicit-function-return-type": "off",
+  }
 }
