--- a/task2/Dockerfile
+++ b/task2/Dockerfile
@@ -1,17 +1,20 @@
 FROM node:12.6.0-alpine
 
+EXPOSE 7070
+
+# environment
+ARG NODE_ENV=production
+ENV NODE_ENV $NODE_ENV
+
 # install yarn
 RUN npm install -g yarn
 
 # our work dir
 WORKDIR /usr/src/app
 
-# environment
-ARG NODE_ENV=production
-ENV NODE_ENV $NODE_ENV
-
 # copy only packages and install it
 COPY package.json yarn.lock ./
+
 RUN yarn install --frozen-lockfile --no-cache --production
 
 # copy rest
@@ -19,8 +22,7 @@ COPY . .
 
 RUN yarn build:prod
 
-EXPOSE 7070
-
+# least privilege
 USER node
 
-CMD ["node", "dist/main.js"]
+CMD ["node", "dist/application.js"]
