--- a/task2/docker-compose.yml
+++ b/task2/docker-compose.yml
@@ -13,6 +13,8 @@ services:
     restart: always
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - /home/app/pgdata:/var/lib/postgresql/data
+      
     environment:
       POSTGRES_DB: pg-db-test
       POSTGRES_USER: test
