--- a/task2/package.json
+++ b/task2/package.json
@@ -12,24 +12,32 @@
     "build:prod": "tsc"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^1.11.0",
+    "@typescript-eslint/parser": "^1.11.0",
     "eslint": "^6.0.1",
     "nodemon": "^1.19.1",
     "ts-node": "^8.3.0",
-    "@typescript-eslint/eslint-plugin": "^1.11.0",
-    "@typescript-eslint/parser": "^1.11.0"
+    "tsconfig-paths": "^3.8.0"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "pg": "^7.11.0",
-    "sequelize": "^5.9.4",
-    "uuid": "^3.3.2",
-    "typescript": "^3.5.2",
     "@types/cors": "^2.8.5",
     "@types/express": "^4.17.0",
     "@types/node": "^12.0.12",
     "@types/pg": "^7.4.14",
+    "@types/ramda": "^0.26.15",
     "@types/sequelize": "^4.28.3",
-    "@types/uuid": "^3.4.5"
+    "@types/uuid": "^3.4.5",
+    "ajv": "^6.10.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "module-alias": "^2.2.0",
+    "pg": "^7.11.0",
+    "ramda": "^0.26.1",
+    "sequelize": "^5.9.4",
+    "typescript": "^3.5.2",
+    "uuid": "^3.3.2"
+  },
+  "_moduleAliases": {
+    "@libs": "dist/libs"
   }
 }
