--- a/task2/package.json
+++ b/task2/package.json
@@ -9,18 +9,19 @@
     "check-types": "tsc --noEmit",
     "lint:fix": "eslint '*/**/*.{js,ts}' --quiet --fix",
     "start:dev": "nodemon",
-    "build:prod": "tsc"
+    "build:prod": "tsc",
+    "start:prod": "node -r ./tsconfig-paths-bootstrap.js dist/application.js"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
     "eslint": "^6.0.1",
     "nodemon": "^1.19.1",
-    "ts-node": "^8.3.0",
-    "tsconfig-paths": "^3.8.0"
+    "ts-node": "^8.3.0"
   },
   "dependencies": {
     "@types/cors": "^2.8.5",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
     "@types/node": "^12.0.12",
     "@types/pg": "^7.4.14",
@@ -29,15 +30,13 @@
     "@types/uuid": "^3.4.5",
     "ajv": "^6.10.1",
     "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
-    "module-alias": "^2.2.0",
     "pg": "^7.11.0",
     "ramda": "^0.26.1",
     "sequelize": "^5.9.4",
+    "tsconfig-paths": "^3.8.0",
     "typescript": "^3.5.2",
     "uuid": "^3.3.2"
-  },
-  "_moduleAliases": {
-    "@libs": "dist/libs"
   }
 }
