--- a/task2/package.json
+++ b/task2/package.json
@@ -7,16 +7,22 @@
   "private": true,
   "scripts": {
     "check-types": "tsc --noEmit",
+    "test": "jest",
     "lint:fix": "eslint '*/**/*.{js,ts}' --quiet --fix",
     "start:dev": "nodemon",
     "build:prod": "tsc",
-    "start:prod": "node -r ./tsconfig-paths-bootstrap.js dist/application.js"
+    "start:prod": "node -r ./tsconfig-paths-bootstrap.js dist/server.js"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.15",
+    "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
     "eslint": "^6.0.1",
+    "jest": "^24.8.0",
     "nodemon": "^1.19.1",
+    "supertest": "^4.0.2",
+    "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0"
   },
   "dependencies": {
