--- a/task2/package.json
+++ b/task2/package.json
@@ -26,6 +26,7 @@
     "ts-node": "^8.3.0"
   },
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.5",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
@@ -35,6 +36,7 @@
     "@types/sequelize": "^4.28.3",
     "@types/uuid": "^3.4.5",
     "ajv": "^6.10.1",
+    "bcrypt": "^3.0.6",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
