--- a/task2/docker-compose.yml
+++ b/task2/docker-compose.yml
@@ -1,12 +1,15 @@
-version: "3.1"
+version: "3.4"
 services:
   nodejs-server:
-    build: .
+    build: 
+      context: .
+      target: production
     restart: always
     depends_on:
       - db
     ports:
       - 7070:7070
+      - 9229:9229
 
   db:
     image: postgres
