--- a/task2/package.json
+++ b/task2/package.json
@@ -11,7 +11,7 @@
     "lint:fix": "eslint '*/**/*.{js,ts}' --quiet --fix",
     "start:dev": "nodemon",
     "build:prod": "tsc",
-    "start:prod": "node -r ./tsconfig-paths-bootstrap.js dist/server.js"
+    "start:prod": "node -r ts-node/register -r ./tsconfig-paths-bootstrap.js dist/server.js"
   },
   "devDependencies": {
     "@types/jest": "^24.0.15",
@@ -22,11 +22,10 @@
     "jest": "^24.8.0",
     "nodemon": "^1.19.1",
     "supertest": "^4.0.2",
-    "ts-jest": "^24.0.2",
-    "ts-node": "^8.3.0"
+    "ts-jest": "^24.0.2"
   },
   "dependencies": {
-    "@types/bcrypt": "^3.0.0",
+    "ts-node": "^8.3.0",
     "@types/cors": "^2.8.5",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
@@ -36,7 +35,7 @@
     "@types/sequelize": "^4.28.3",
     "@types/uuid": "^3.4.5",
     "ajv": "^6.10.1",
-    "bcrypt": "^3.0.6",
+    "argon2": "^0.24.0",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
