--- a/task2/Task 2.2/docker-compose.yml
+++ b/task2/Task 2.2/docker-compose.yml
@@ -1,10 +1,11 @@
 version: "3.4"
 services:
   nodejs-server:
-    build: 
+    build:
       context: .
-      target: production
+      target: development
     restart: always
+    network-mode:
     depends_on:
       - db
     ports:
