Task 2.2: db fixes

--- a/task2/Task 2.2/docker-compose.yml
+++ b/task2/Task 2.2/docker-compose.yml
@@ -3,29 +3,25 @@ services:
   nodejs-server:
     build:
       context: .
-      target: development
+      target: production
     restart: always
-    network-mode:
     depends_on:
       - db
     ports:
       - 7070:7070
       - 9229:9229
-
   db:
     image: postgres
     restart: always
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
       - /home/app/pgdata:/var/lib/postgresql/data
-
     environment:
       POSTGRES_DB: pg-db-test
       POSTGRES_USER: test
       POSTGRES_PASSWORD: test1234
     ports:
       - 5432
-
   adminer:
     image: adminer
     restart: always
