--- a/task2/Task 2.2/package.json
+++ b/task2/Task 2.2/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "check-types": "tsc --noEmit",
     "test": "jest",
-    "lint:fix": "eslint '*/**/*.{js,ts}' --quiet --fix",
+    "lint:fix": "eslint --fix . --ext .ts src",
     "start:dev": "nodemon",
     "build:prod": "tsc",
     "start:prod": "node -r ts-node/register -r ./tsconfig-paths-bootstrap.js dist/server.js"
