--- a/task3/Task 3.1/package.json
+++ b/task3/Task 3.1/package.json
@@ -15,6 +15,8 @@
     "@types/express": "^4.17.1",
     "@types/node": "^12.7.4",
     "@types/uuid": "^3.4.5",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.10.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "inversify": "^5.0.1",
