--- a/task3/Task 3.1/package.json
+++ b/task3/Task 3.1/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
+    "@types/lodash": "^4.14.138",
     "@types/node": "^12.7.4",
     "@types/uuid": "^3.4.5",
     "class-transformer": "^0.2.3",
@@ -22,6 +23,7 @@
     "inversify": "^5.0.1",
     "inversify-express-utils": "^6.3.2",
     "io-ts": "^2.0.1",
+    "lodash": "^4.17.15",
     "pg": "^7.12.1",
     "reflect-metadata": "^0.1.13",
     "typescript": "^3.6.2",
