--- a/task3/Task 3.1/package.json
+++ b/task3/Task 3.1/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.6",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.1",
     "@types/lodash": "^4.14.138",
     "@types/node": "^12.7.4",
@@ -19,6 +20,7 @@
     "class-transformer": "^0.2.3",
     "class-validator": "^0.10.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "inversify": "^5.0.1",
     "inversify-express-utils": "^6.3.2",
