--- a/task3/Task 3.1/package.json
+++ b/task3/Task 3.1/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.1",
     "@types/lodash": "^4.14.138",
     "@types/node": "^12.7.4",
+    "@types/sequelize": "^4.28.4",
     "@types/uuid": "^3.4.5",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.10.0",
@@ -28,6 +29,7 @@
     "lodash": "^4.17.15",
     "pg": "^7.12.1",
     "reflect-metadata": "^0.1.13",
+    "sequelize": "^5.18.4",
     "typescript": "^3.6.2",
     "uuid": "^3.3.3"
   },
