--- a/task3/package.json
+++ b/task3/package.json
@@ -14,6 +14,7 @@
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.1",
+    "@types/jsonwebtoken": "^8.3.3",
     "@types/lodash": "^4.14.138",
     "@types/node": "^12.7.4",
     "@types/sequelize": "^4.28.4",
@@ -26,6 +27,7 @@
     "inversify": "^5.0.1",
     "inversify-express-utils": "^6.3.2",
     "io-ts": "^2.0.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "pg": "^7.12.1",
     "reflect-metadata": "^0.1.13",
