--- a/task3/package.json
+++ b/task3/package.json
@@ -8,6 +8,8 @@
   "scripts": {
     "build:prod": "tsc",
     "start:dev": "nodemon",
+    "check-types": "tsc --noEmit",
+    "lint:fix": "eslint --fix . --ext .ts src",
     "start:prod": "node dist/server.js"
   },
   "dependencies": {
@@ -36,7 +38,13 @@
     "uuid": "^3.3.3"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.3.0",
+    "@typescript-eslint/parser": "^2.3.0",
+    "eslint": "^6.4.0",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "nodemon": "^1.19.2",
+    "prettier": "^1.18.2",
     "ts-node": "^8.3.0"
   }
 }
