--- a/task3/package.json
+++ b/task3/package.json
@@ -13,6 +13,7 @@
     "start:prod": "node dist/server.js"
   },
   "dependencies": {
+    "@types/argon2": "^0.15.0",
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.1",
@@ -21,6 +22,7 @@
     "@types/node": "^12.7.4",
     "@types/sequelize": "^4.28.4",
     "@types/uuid": "^3.4.5",
+    "argon2": "^0.24.1",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.10.0",
     "cors": "^2.8.5",
