--- a/task3/package.json
+++ b/task3/package.json
@@ -19,6 +19,7 @@
     "@types/express": "^4.17.1",
     "@types/jsonwebtoken": "^8.3.3",
     "@types/lodash": "^4.14.138",
+    "@types/morgan": "^1.7.37",
     "@types/node": "^12.7.4",
     "@types/sequelize": "^4.28.4",
     "@types/uuid": "^3.4.5",
@@ -33,6 +34,7 @@
     "io-ts": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "morgan": "^1.9.1",
     "pg": "^7.12.1",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^5.18.4",
